# pdc

./: CMakeLists.txt  README.md
doc/: README.md  doc.drawio  paper.latex  report.odt
poibin/: poibin.py  test.py
src/: bin_poi.hpp  core.hpp  emp_dist.cpp  emp_dist.hpp  main.cpp  simulate.cpp  simulate.hpp
src/commands/: commands.cpp  commands.hpp  dataset_io.cpp  dataset_io.hpp  generate.cpp  generate.hpp
src/common/: timer.hpp
src/math/: bern_stat.cpp  bern_stat.hpp  bin_poi.cpp  bin_poi.hpp  emp_dist.cpp  emp_dist.hpp
src/methods/: berlang.hpp  grin.hpp  method.hpp  progressive.hpp
tests/: agents.py  busy.py  common.py  critical.py  dists.py  grin.sh  main.c  progressive.sh  test.py  test_run.sh
